# garbled_circuits

./: .gitignore  Cargo.toml  README.md
examples/: alice.rs  bob.rs
src/: io.rs  lib.rs  ops.rs  ot.rs
