[package]
name = "garbled_circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
# hashing
sha2 = "0.10.8"

# symmetric key cryptography
aes-gcm = "0.10.3"

# public key cryptography
rsa = "0.9.7"

rand = "0.8"

# serialization
serde = { version = "1.0.218", features=["derive"]}
serde_json = "1.0"
serde_with = "3.12.0"
